--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -39,9 +39,9 @@
 // 		margin: 10px auto;
 
 // 		&.categoriessection,
-// 		&.crewsection,
-// 		&.createcrewsection,
-// 		&.crewsetupsection,
+// 		&.groupsection,
+// 		&.creategroupsection,
+// 		&.groupsetupsection,
 // 		&.profilesection {
 // 			// @extend %gd6;
 // 			// width: 100%;
@@ -53,7 +53,7 @@
 // 	#side {
 // 		display: none;
 // 	}
-// 	.crewlist {
+// 	.grouplist {
 // 		li {
 // 			@extend %gd6;
 // 			margin: 0 1% 10px;
@@ -63,7 +63,7 @@
 // 			}
 // 		}
 // 	}
-// 	.crewinfo {
+// 	.groupinfo {
 // 		width: 100%;
 // 		padding: 3% 5%;
 // 		margin: 0 0 20px 0;
@@ -203,7 +203,7 @@
 // 	.postbottom {
 // 		width: 100%;
 // 	}
-// 	.crewlist {
+// 	.grouplist {
 // 		li {
 // 			@extend %gd12;
 // 			margin: 0 auto 10px;
@@ -212,7 +212,7 @@
 // 				margin: 0 auto 10px;
 // 			}
 // 		}
-// 		.crewImg img {
+// 		.groupImg img {
 // 			margin: -80px 0 0;
 // 		}
 		
