--- a/sass/car.scss
+++ b/sass/car.scss
@@ -2031,10 +2031,11 @@ body.registration input {
 	width: 100%;
 	margin: 0 auto 20px;
 	padding: 20px;
-	overflow: hidden;
+	// overflow: hidden;
 	background: #576579;
 	border-radius: 5px;
 	@include box-shadow(0 1px 2px rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.2));
+	@include clearfix();
 	h3 {
 		color: #fff;
 		margin: 0 auto 10px;
