--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -22,7 +22,7 @@
 // 		.userLvl,
 // 		.nextLvl {
 // 			width: 10%;
-// 			font-size: 0.8em;
+// 			font-size: 0.8rem;
 // 		}
 // 		.xpBar {
 // 			width: 78%;
@@ -93,7 +93,7 @@
 // 	@include grid-wrap($gw-width: $mobile-lr);
 
 // 	body {
-// 		font-size: 0.8em;
+// 		font-size: 0.8rem;
 // 	}
 // 	#signup {
 // 		@extend %gd12;
@@ -218,7 +218,7 @@
 		
 // 	}
 // 	.editpostbtn a {
-// 		font-size: 1em;
+// 		font-size: 1rem;
 // 	}
 // 	#commentstop,
 // 	#commentsarea,
