--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,6 @@
-* {
+*,
+*:before,
+*:after {
 	margin:0; 
 	padding:0; 
 	-moz-box-sizing: border-box; 
@@ -8,23 +10,30 @@
 img {
 	border: 0 none;
 }
-@include c-font($set-c-font: $set-custom-font, $f-count: $font-count, $c1-font-family: $custom1-font-family, $c2-font-family: $custom2-font-family, $c1-font-family-url: $custom1-font-family-url, $c2-font-family-url: $custom2-font-family-url);
+@include c-font($set-c-font: $set-custom-font, $c1-font-family: $font-family, $c1-font-family-url: $font-family-url);
+html, body {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+}
+html {
+	font-size: 62.5%;
+}
 body {
 	background: $body-bg;
 	color: $body-text-color;
 	font-size: $body-font-size;
+	line-height: $line-height;
 	font-family: $body-font-family;
 }
 a {
-	color:$link;
+	color: $link;
 	text-decoration: none;
 	outline: none;
 	&:hover {
-		color:$link-hover;
+		color: $link-hover;
 	}
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: $h-font-family;
 	font-weight: $h-weight;
 	letter-spacing: .02em;
 }
@@ -75,15 +84,19 @@ textarea {
 	padding: 10px 14px;
 	margin: 0 0 10px;
 	width: 100%;
-	font-size: 1em;
+	font-size: 1.4rem;
 	color: $input-text-color;
-	font-family: $custom1-font-family;
+	font-family: $font-family;
 	border: 1px solid #ccc;
 	background: $input-bg;
-	@include border-radius(4px);
-	// @include box-shadow(0 0 20px rgba(255,255,255,.9), 0 1px 2px rgba(0,0,0,.6) inset);
-	@include transition(box-shadow 0.3s linear);
-
+	border-radius: $border-radius;
+	outline: none;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.15) inset;
+	transition: border 0.3s;
+	
+	&:focus {
+		border: 1px solid darken(#ccc,15%);
+	}
 	&.required {
 		border: 1px solid $red;
 	}
@@ -91,10 +104,10 @@ textarea {
 // input[type="submit"] {
 // 	padding: .8% .6%;
 //     border: 1px solid #ccc;
-//     font-size: 1em;
+//     font-size: 1rem;
 //     background: $input-bg;
 //     color: $input-text-color;
-//     font-family: $custom1-font-family;
+//     font-family: $font-family;
 //     margin: 0 0 1%;
 //     cursor: pointer;
 //     &:hover {
@@ -112,7 +125,7 @@ input[type="email"]:focus,
 input[type="password"]:focus {
 	color: $input-focus-text-color;
 	background:$input-bg;
-	@include box-shadow(0 0 4px rgba(66,167,221, 0.9));
+	// @include box-shadow(0 0 4px rgba(66,167,221, 0.9));
 }
 input:focus::-webkit-input-placeholder, input:focus::-moz-placeholder {
     color: $input-focus-text-color;
@@ -127,8 +140,8 @@ button {
 @include drop-down($dd-default-w: 100%, $dd-h: 36px, $dd-margin: $auto, $dd-t-padding: 0 .4em, $dd-t-color: $select-t-color, $dd-f-weight: normal, $dd-f-size: 1em);
 // Btn
 %btnAll {
-	font-size:1.4em;
-	line-height:1em;
+	font-size:1.4rem;
+	line-height:1rem;
 	padding:$btn-padding;
 	margin:0 auto;
 	border:0 none;
@@ -139,7 +152,7 @@ button {
     display: block;
     position: relative;
     text-decoration: none;
-    @include border-radius(5px);
+    border-radius: $border-radius;
     background:$btn-color;
 	&:hover {
 		cursor:pointer;
