--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -16,7 +16,8 @@ $danger: #E74C3C;
 $success: #2ECC71;
 $inverse: #34495E;
 $info: #3498DB;
-$bg-color: #687991;
+// $bg-color: #687991;
+$bg-color: #EAEDF1;
 
 // DONT CHANGE VARIABLE NAMES BELOW THIS POINT 
 // _base.scss AND mixins.scss ARE DEPENDENT ON THESE VARS
@@ -24,11 +25,9 @@ $bg-color: #687991;
 // Custom Font Family
 // Set true to use embeded fonts set false to use google font or default font
 $set-custom-font: true;
-$font-count: 1;
-$custom1-font-family: 'Proxima Nova','Montserrat', 'Open Sans', 'Helvetica Neue', 'Helvetica', arial, sans-serif;
-$custom1-font-family-url: 'itcavantgardestd-md';
-$custom2-font-family: 'ITCAvantGardeGothicStdBook';
-$custom2-font-family-url: 'itcavantgardestd-bk';
+$font-family: 'Proxima Nova','Montserrat', 'Open Sans', 'Helvetica Neue', 'Helvetica', arial, sans-serif;
+$font-family-url: 'itcavantgardestd-md';
+$line-height: 1.5;
 //Add custom family and url for more fonts 
 
 // Default Font Colors
@@ -39,31 +38,33 @@ $gray-maintext: #333;
 // body Background
 $body-bg: none center center no-repeat $bg-color;
 $body-text-color: $gray-maintext;
-$body-font-family: $custom1-font-family;
-$body-font-size: 100%;
+$body-font-family: $font-family;
+$body-font-size: 1.6em;
 
 // Elements
 $link: #226B93;
-$link-hover: darken($link,20%); 
+$link-hover: darken($link,20%);
 $ui-border: 1px solid #555;
 
 // Spacing
 $auto: 0 auto;
 
+//border radius
+$border-radius: 3px;
+
 // H font style
-$h-font-family: 'Proxima Nova', 'Helvetica Neue', sans-serif;
 $h-weight: 700;
 
 // Base font-size
-$h1-size: 2em;
-$h2-size: 1.5em;
-$h3-size: 1.2em;
-$h4-size: 1em;
-$h5-size: .8em;
-$h6-size: .6em;
-$label-size: 1em;
-$p-size: 1em;
-$li-size: 1em;
+$h1-size: 2.8rem;
+$h2-size: 2.2rem;
+$h3-size: 1.8rem;
+$h4-size: 1.2rem;
+$h5-size: 1rem;
+$h6-size: 0.8rem;
+$label-size: 1.2rem;
+$p-size: 1.2rem;
+$li-size: 1.2rem;
 
 // input style
 $input-bg: #fff;
