Updated Sass structure

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -98,7 +98,7 @@ textarea {
 		border: 1px solid darken(#ccc,15%);
 	}
 	&.required {
-		border: 1px solid $red;
+		border: 1px solid $color-red;
 	}
 }
 // input[type="submit"] {
