--- a/sass/components/_right.scss
+++ b/sass/components/_right.scss
@@ -1,9 +1,10 @@
 /*====================== RIGHT =======================*/
 #right {
-	@extend %gd7;
+	// @extend %gd7;
+	@include make-sm-column(7);
 	//width:760px;
 	// width: 60%;
-	padding: 0 0 20px 22px;
+	// padding: 0 0 20px 22px;
 	margin: 20px 0 0 0px;
 	float: left;
 
@@ -12,16 +13,17 @@
 	&.creategroupsection,
 	&.groupsetupsection,
 	&.profilesection {
-		@extend %gd9;
+		// @extend %gd9;
+		@include make-sm-column(9);
 		// width: 82%;
 		padding: 20px 0 20px 3%;
 	}
 	
-	.right-content {
-		background-color:#fff;
-		margin: 0 auto 20px;
-		padding:10px;
-		overflow: hidden;
-		// border-radius: 5px;
-	}
+	// .right-content {
+	// 	background-color:#fff;
+	// 	margin: 0 auto 20px;
+	// 	padding:10px;
+	// 	overflow: hidden;
+	// 	// border-radius: 5px;
+	// }
 }
