--- a/sass/components/_createpost-overlay.scss
+++ b/sass/components/_createpost-overlay.scss
@@ -4,6 +4,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	bottom: 0;
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,0.4);
@@ -19,14 +20,22 @@
 }
 
 #createpost {
+	@include make-sm-column(6);
+
 	opacity: 0;
 	position: absolute;
 	top: 0px;
-	left: 50%;
-	width: 600px;
-	margin: 20px 0 0 -300px;
+	left: 0;
+	margin: 20px auto;
+
+	@media (min-width: $screen-sm-min) {
+		left: 50%;
+		margin: 20px auto 0 -25%;
+	}
 	z-index: -1;
 	transition: all 0.5s ease;
+
+
 	.openOverlay & {
 		top: 40px;
 		opacity: 1;
@@ -34,5 +43,51 @@
 	}
 	.closebtn {
 		cursor: pointer;
+	}
+}
+
+#postcomment {
+	width: 100%;
+	position: relative;
+	margin: 20px auto 0;
+	padding: 20px;
+	background: none repeat scroll 0 0 #fff;
+	@include clearfix();
+
+	.closebtn {
+    	float: right;
+    	padding: 6px 10px;
+    	font-size: 1.2rem;
+    	border-radius: 2px;
+
+    	&:hover {
+    		background: darken(#F3F3F3, 10%);
+    	}
+    }
+
+    .catselect {
+    	width: 50%;
+    	display: block;
+    }
+
+    label {
+    	&.inputtitle,
+		&.inputmessage {
+			//margin:20px 0 0 0;
+		}
+    }
+    .groupname {
+    	color: $color-blue;
+    	margin: 0 auto 10px;
+    }
+
+    .submitbtn,
+	.note {
+		float: left;
+	}
+	.note {
+		margin: 10px 0 0 20px;
+		font-size: 1rem;
+		color: #8D8D8D;
 	}
 }
