--- a/sass/pages/_frontpage.scss
+++ b/sass/pages/_frontpage.scss
@@ -3,7 +3,8 @@
 	height: 900px;
 }
 .homeHeading {
-	@extend %gd8;
+	// @extend %gd8;
+	@include make-sm-column(8);
 	position: relative;
 	// width: 65%;
 	float: left;
@@ -25,20 +26,24 @@
 }
 
 .signupfront {
-	@extend %gd4;
+	// @extend %gd4;
+	@include make-sm-column(4);
 	position: relative;
 	// width: 34%;
 	float: right;
 	margin: 50px 0 0;
 	padding: 20px;
 	z-index: 1;
-	// background: #fff;
-	background: rgba(255,255,255,0.7);
+	background: #fff;
+	background: rgba(255,255,255,0.95);
 	// border:1px solid #eee;
-	border-radius: 5px;
+	border-radius: $border-radius;
 	@include box-shadow(0 1px 3px rgba(0,0,0,.25));
 	// @include gradient(#f9f9f9, #e6e6e6);
 
+	form {
+		overflow: hidden;
+	}
 	p,
 	h3 {
 		float:right;
@@ -54,23 +59,30 @@
 		margin:0px 0 15px 0;
 		float:none;
 		text-align:center;
-		text-shadow:0 1px 0px rgba(255,255,255,0.5);
+		// text-shadow:0 1px 0px rgba(255,255,255,0.5);
 
 		span {
 			color:#333;
 		}
 	}
 
-	
-	.userinput {
-		float: right;
-		padding: 10px;
-		font-size: 1.4rem;
-		width: 100%;
-		border: 1px solid #888;
-		border-radius: 4px;
-		@include box-shadow(inset 0 1px 3px rgba(0,0,0,0.15));
-	}
+	hr {
+		clear: both;
+        margin: 20px 0;
+        background: none;
+        border: 0 none;
+        border-top: 1px solid #e2e2e3;
+    }
+
+	// .userinput {
+	// 	float: right;
+	// 	padding: 10px;
+	// 	font-size: 1.4rem;
+	// 	width: 100%;
+	// 	border: 1px solid #888;
+	// 	border-radius: 4px;
+	// 	@include box-shadow(inset 0 1px 3px rgba(0,0,0,0.15));
+	// }
 	.signup {
 		float: none;
 	    margin: 0 auto;
@@ -86,32 +98,17 @@
 		margin: 10px auto;
 	}
 
-	.btn {
-		display:block;
-		//width:180px;
-		margin: 0px 0;
-		padding: 8px 0;
+	.signupbtn {
 		color: #333;
-		outline: none;
-		font-size: 1.6rem;
-		text-align:center;
-		text-decoration:none;
-		border-radius: 5px;
-		background: #fbf849;
+		background: $color-yellow;
 
 		&:hover {
 			color:#000;
-			background: darken(#fbf849, 20%);
+			background: darken($color-yellow, 5%);
 		}
 	}
-	
-	
-
-	hr {
-		clear:both;
-		margin: 5px 10px;
-	}
 }
+
 .homeAbout {
 	width: 100%;
 	background: #687991;
