--- a/sass/pages/_groups.scss
+++ b/sass/pages/_groups.scss
@@ -1,7 +1,7 @@
 /* ------- GROUPS Section ------- */
 .groupHeader {
 	position: relative;
-	margin: 0 auto 30px;
+	// margin: 0 auto 30px;
 	@include clearfix();
 }
 .createGroup {
@@ -133,7 +133,7 @@
 		color: #fff;
 		font-size: 1rem;
 		line-height: 1rem;
-		background: $red;
+		background: $color-red;
 		border-radius: 2px;
 	}
 	.members,
@@ -151,7 +151,7 @@
 			padding: 5px 10px;
 			color: #fff;
 			font-weight: normal;
-			background: lighten($blue, 10%);
+			background: lighten($color-blue, 10%);
 			@include box-shadow(inset 0 1px 3px rgba(0,0,0,0.2));
 			border-radius: 20px;
 		}
