--- a/sass/components/_inputs.scss
+++ b/sass/components/_inputs.scss
@@ -1,6 +1,6 @@
 .userinput {
 	padding:10px 2px;
-	border-radius: 3px;
+	border-radius: $border-radius;
 	font-size:1.4rem;
 	//width:250px;
 	border: 1px solid #cccccc;
