--- a/sass/components/_posts.scss
+++ b/sass/components/_posts.scss
@@ -7,6 +7,21 @@
 	// border-radius: $border-radius;
 	@include clearfix();
 }
+.posterror{
+	// @include make-sm-column(8);
+
+	// @media (min-width: $screen-sm-min) {
+	// 	float: right;
+	// }
+	
+	position: relative;
+	width: 100%;
+	margin: 0 0 50px;
+	clear: both;
+	text-align: center;
+	// border-radius: $border-radius;
+	@include clearfix();
+}
 
 .postuser {
 	display: none;
