--- a/sass/pages/_frontpage.scss
+++ b/sass/pages/_frontpage.scss
@@ -3,17 +3,15 @@
 	height: 900px;
 }
 .homeHeading {
-	// @extend %gd8;
-	@include make-sm-column(8);
+	// @include make-sm-column(12);
 	position: relative;
-	// width: 65%;
-	float: left;
+	text-align: center;
 	margin: 40px auto;
 	z-index: 1;
 
 	h2,
 	p {
-		text-align: left;
+		// text-align: left;
 		color: #fff;
 		text-shadow: 0 1px 4px rgba(0,0,0,0.7);
 	}
@@ -26,12 +24,13 @@
 }
 
 .signupfront {
-	// @extend %gd4;
 	@include make-sm-column(4);
-	position: relative;
-	// width: 34%;
-	float: right;
-	margin: 50px 0 0;
+	@media (min-width: $screen-sm-min) {
+		float: none;
+		clear: both;
+	}
+	float: left;
+	margin: 50px auto 0;
 	padding: 20px;
 	z-index: 1;
 	background: #fff;
@@ -68,11 +67,11 @@
 
 	hr {
 		clear: both;
-        margin: 20px 0;
-        background: none;
-        border: 0 none;
-        border-top: 1px solid #e2e2e3;
-    }
+		margin: 20px 0;
+		background: none;
+		border: 0 none;
+		border-top: 1px solid #e2e2e3;
+	}
 
 	// .userinput {
 	// 	float: right;
@@ -85,8 +84,8 @@
 	// }
 	.signup {
 		float: none;
-	    margin: 0 auto;
-	    width: 100%;
+		margin: 0 auto;
+		width: 100%;
 	}
 
 	.submitbtn {
@@ -126,43 +125,88 @@
 }
 
 #bgslider {
-	// display: none;
-	position: absolute;
-	top: 135px;
-	left: 0;
-	width: 100%;
-	height: 900px;
-	z-index: 0;
-	
+	top: 115px;
 
-	.image {
+	&,
+	&:after {
 		position: absolute;
-		top:0;
-		left: 0;
+		width: 100%;
+		height: 900px;
+		left: 0px;
+		z-index: -1;
+	}
+
+	&:after {
+		content: '';
+		top: 0;
+		background: linear-gradient(to bottom, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%);
+		// background: url(../images/pages/index/gradient.png) repeat-x top left;
+	}
+
+	li { 
 		width: 100%;
 		height: 100%;
-		z-index: 1;
-
-		&.active {
-			z-index: 3;
-		}
-
-		&.slide1 {background: url('../images/bgslide_01.jpg') no-repeat center top;background-size: cover;}
-		&.slide2 {background: url('../images/bgslide_02.jpg') no-repeat center top;background-size: cover;}
-		&.slide3 {background: url('../images/bgslide_03.jpg') no-repeat center top;background-size: cover;}
-		&.slide4 {background: url('../images/bgslide_04.jpg') no-repeat center top;background-size: cover;}
-		&.slide5 {background: url('../images/bgslide_05.jpg') no-repeat center top;background-size: cover;}
-		&.slide6 {background: url('../images/bgslide_06.jpg') no-repeat center top;background-size: cover;}
-		&.slide7 {background: url('../images/bgslide_07.jpg') no-repeat center top;background-size: cover;}
-	}
-	.photocred {
-		display: block;
 		position: absolute;
-		bottom: 10px;
-		left: 10px;
-		padding: 4px 10px;
-		color: #333;
-		background: rgba(255,255,255,0.6);
-		border-radius: 4px;
+		top: 0px;
+		left: 0px;
+		color: transparent;
+		background-size: cover;
+		background-position: 50% 50%;
+		background-repeat: none;
+		opacity: 0;
+		z-index: -1;
+		animation: imageAnimation 42s linear infinite 0s;
+
+		// show the first one if there's no animation support
+		.no-cssanimations & {
+			opacity: 1;
+		}
 	}
+	
+	li:nth-child(1) { 
+		background-image: url(../images/pages/index/bgslide_01.jpg) 
+	}
+	li:nth-child(2) { 
+		background-image: url(../images/pages/index/bgslide_02.jpg);
+		animation-delay: 6s; 
+	}
+	li:nth-child(3) { 
+		background-image: url(../images/pages/index/bgslide_03.jpg);
+		animation-delay: 12s; 
+	}
+	li:nth-child(4) { 
+		background-image: url(../images/pages/index/bgslide_04.jpg);
+		animation-delay: 18s; 
+	}
+	li:nth-child(5) { 
+		background-image: url(../images/pages/index/bgslide_05.jpg);
+		animation-delay: 24s; 
+	}
+	li:nth-child(6) { 
+		background-image: url(../images/pages/index/bgslide_06.jpg);
+		animation-delay: 30s; 
+	}
+	li:nth-child(7) { 
+		background-image: url(../images/pages/index/bgslide_07.jpg);
+		animation-delay: 36s; 
+	}
+	
+	// .photocred {
+	// 	display: block;
+	// 	position: absolute;
+	// 	bottom: 10px;
+	// 	left: 10px;
+	// 	padding: 4px 10px;
+	// 	color: #333;
+	// 	background: rgba(255,255,255,0.6);
+	// 	border-radius: 4px;
+	// }
+}
+
+@keyframes imageAnimation { 
+	0% { opacity: 0; animation-timing-function: ease-in; }
+	8% { opacity: 1; animation-timing-function: ease-out; }
+	17% { opacity: 1 }
+	25% { opacity: 0 }
+	100% { opacity: 0 }
 }
