--- a/sass/cleditor.scss
+++ b/sass/cleditor.scss
@@ -1,4 +1,6 @@
-@import "var","mixins","fontface";
+@import "var";
+@import "mixins";
+@import "fonts/proxima-nova";
 .cleditorMain {
 	padding:0 1px 1px;
 }
