--- a/sass/components/_top.scss
+++ b/sass/components/_top.scss
@@ -288,11 +288,11 @@
 			vertical-align: 8px;
 		}
 	}
-	.nav-home i {background-position: center 0;}
-	.nav-categories i {background-position: center -30px;}
-	.nav-groups i {background-position: center -60px;}
-	.nav-events i {background-position: center -90px;}
-	.nav-topposts i {background-position: center -120px;}
-	.nav-mygroup i {background-position: center -150px;}
+	// .nav-home i {background-position: center 0;}
+	// .nav-categories i {background-position: center -30px;}
+	// .nav-groups i {background-position: center -60px;}
+	// .nav-events i {background-position: center -90px;}
+	// .nav-topposts i {background-position: center -120px;}
+	// .nav-mygroup i {background-position: center -150px;}
 	// .nav-accessories i {background-position: 0 0;}
 }
