--- a/sass/pages/_setup.scss
+++ b/sass/pages/_setup.scss
@@ -5,6 +5,12 @@
 	// width: 100%;
 	padding: 50px 0;
 	@include clearfix();
+
+	form {
+		@include make-sm-column(6);
+		@include make-sm-column-offset(3);
+	}
+
 	h2 {
 		margin: 0 auto 30px;
 	}
@@ -14,7 +20,7 @@
 	}
 	ul {
 		// @extend %gd7;
-		@include make-sm-column(7);
+		// @include make-sm-column(7);
 		float: none;
 		// width: 60%;
 		margin: 0 auto 20px;
@@ -38,15 +44,11 @@
 		}
 		
 	}
-
-	.userName,
-	.profilePic,
-	.editBio,
-	.enterBirthday,
-	.enterLocation,
-	.enterCar {
-
+	label {
+		display: block;
 	}
+
+	
 	.profilePic {
 		h3 {
 			margin: 36px 1% 0;
@@ -54,7 +56,7 @@
 	}
 	.profileImg {
 		float: left;
-		width: 68%;
+		width: 80%;
 
 		.avatarImg,
 		img {
@@ -67,13 +69,13 @@
 		}
 		p {
 			text-align: center;
-			width: 60%;
+			// width: 60%;
+			float: left;
+			marin: 30px auto 0 1%;
 		}
 		span {
 			position: relative;
-			height: 30px;
 			width: 180px;
-			padding: 4px 0 0;
 			margin: 0 auto;
 			text-align: center;
 			font-style: normal;
@@ -124,8 +126,8 @@
 		color: #333333;
 	}
 	p {
-		float: left;
-		width: 80%;
+		// float: left;
+		// width: 80%;
 		span {
 			display: block;
 		}
@@ -137,6 +139,6 @@
 	.submitbtn {
 		clear: both;
 		margin: 10px auto;
-		border: 1px solid #006493;
+		// border: 1px solid #006493;
 	}
 }
